corrected alignments

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -132,12 +132,26 @@ p {
 
 .container {
     width: 100%;
-    padding-right: 10px;
-    padding-left: 10px;
+    padding-right: 20px;
+    padding-left: 20px;
     padding-bottom: 30px;
 }
 
 #map2 {
+    margin-top: 20px;
+    float:none;
     width: 100%;
     height: 400px;
+
+}
+
+.text-field2{
+    padding-right: 10px;
+    margin-left: -10px;
+}
+
+.txt-area{
+    margin-top: 25px;
+    width: 100%;
+    height: 70px;
 }
